src/styles/_includes/components/_aside.scss
.aside {
  min-width: 196px;
  max-width: 388px;
  flex-basis: 25%;
  // grid-area: 1 / 2 / 2 / 3;
  padding: 20px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-content: center;
  background-image: url('../images/aside-bg.jpg');
  background-size: 132px;
  background-position: top right;
  background-repeat: no-repeat;

  &__container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-content: center;

    .cta {
      align-self: center;
    }
  }

  &__footer {
    padding-bottom: 95px;
    margin-left: -35px;
  }

  &__logo {
    text-align: center;

    img {
      width: 126px;
      height: auto;
      pointer-events: none;
    }

    a {
      display: block;
    }
  }

  &__avatar {
    text-align: right;
    padding-bottom: 44px;

    img {
      height: 86px;
      width: auto;
    }
  }

  &__banner {
    background-color: #0066a9;
    display: flex;
    flex-direction: row;
    border-top-left-radius: 50px;
    border-bottom-left-radius: 50px;
    margin-right: -20px;
    margin-left: -20px;
    margin-bottom: 15px;

    img {
      height: 86px;
      pointer-events: none;
    }

    span {
      font-size: 18px;
      line-height: 20px;
      padding: 23px 0 23px 10px;
      font-weight: bold;
      min-height: 86px;
    }

    &--modal {
      text-decoration: none;
      margin-left: 0;
      margin-top: 30px;
      margin-bottom: 45px;

      img {
        height: 53px;
      }

      span {
        padding-top: 11px;
        padding-bottom: 9px;
        padding-left: 13px;
        font-size: 14px;
        line-height: 15px;
        min-height: 53px;
      }
    }
  }

  &__list {
    list-style: none;
    margin: 0;
    padding: 0;
    text-indent: -22px;
    margin-left: 22px;

    li {
      margin: 0;
      padding: 0;
      margin-bottom: 18px;
      font-size: 13px;
      line-height: 18px;

      &:last-child {
        margin-bottom: 0;
      }

      a {
        font-size: 13px;
        line-height: 18px;
      }

      &::before {
        content: '';
        display: inline-block;
        width: 13px;
        height: 15px;
        background-image: url('../images/external-icon.png');
        background-size: contain;
        background-repeat: no-repeat;
        margin-right: 5px;
        vertical-align: middle;
      }
    }
  }

  &__scroll {
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    font-size: 10px;
    line-height: 12px;
    max-width: 50px;
    padding: 0;
    margin-left: auto;
    margin-right: 90px;
    margin-top: 30px;
    appearance: none;
    background: transparent;
    border: 0;

    &:focus,
    &:active {
      outline: 0;
    }

    &-icon {
      position: relative;
      height: 15px;
      width: 30px;
      display: inline-block;
      padding-bottom: 12px;

      &::before,
      &::after {
        content: '';
        position: absolute;
        bottom: 0;
        width: 2px;
        height: 100%;
        // transition: all 0.5s;
      }

      &::before {
        left: 9px;
        transform: rotate(-45deg);
        background-color: $white;
      }

      &::after {
        right: 9px;
        transform: rotate(45deg);
        background-color: $white;
      }
    }
  }
}

// @include media-breakpoint-up(1024px) {
//   .aside {
//     padding-right: calc(((100% - 1024px) / 2));
//   }
// }

